<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <fragment class="sga.securetravel.MapFragment"
        android:id="@+id/mapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:layout="@layout/fragment_map" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_head"
        android:id="@+id/welcome_head"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/material_blue_grey_950"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_body"
        android:id="@+id/welcome_body"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:layout_below="@+id/welcome_head"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/welcome_head"
        android:layout_alignEnd="@+id/welcome_head" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_contacts"
        android:id="@+id/choose_contact"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="chooseContact" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contact_confirm_message_1"
        android:id="@+id/contact_confirm_message_1"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/welcome_head"
        android:layout_alignEnd="@+id/welcome_head" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_contact"
        android:id="@+id/confirm_contact"
        android:visibility="invisible"
        android:onClick="saveContact"
        android:layout_below="@+id/contact_confirm_message_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_another_contact"
        android:id="@+id/choose_another_contact"
        android:visibility="invisible"
        android:onClick="chooseContact"
        android:layout_below="@+id/confirm_contact"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/contact_confirm_message_name"
        android:layout_below="@+id/contact_confirm_message_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/welcome_head"
        android:layout_alignEnd="@+id/welcome_head"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/contact_confirm_message_number"
        android:layout_below="@+id/contact_confirm_message_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/welcome_head"
        android:layout_alignEnd="@+id/welcome_head"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_location"
        android:id="@+id/send_location"
        android:visibility="invisible"
        android:textColor="#e80800"
        android:textStyle="bold"
        android:textSize="18sp"
        android:onClick="chooseSend"
        android:layout_above="@id/choose_another_contact"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_single_update"
        android:id="@+id/send_single_update"
        android:visibility="invisible"
        android:textColor="#e80800"
        android:textStyle="bold"
        android:textSize="18sp"
        android:onClick="singleSend"
        android:layout_above="@id/choose_another_contact"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_continuous_update"
        android:id="@+id/send_continuous_update"
        android:visibility="invisible"
        android:textColor="#e80800"
        android:textStyle="bold"
        android:textSize="18sp"
        android:onClick="continuousSend"
        android:layout_below="@id/send_single_update"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/send_continuous_update"
        android:onClick="backAction" />

</RelativeLayout>
